--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
+  "name": "websocket",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
   "dependencies": {
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "moment": "^2.29.4",
+    "socket.io": "^4.5.1",
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
