--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
+  "type": "module",
   "name": "websocket",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "build": "node src/batch/createTables.js"
   },
   "keywords": [],
   "dependencies": {
+    "better-sqlite3": "^7.6.2",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.3.0",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "socket.io": "^4.5.1",
     "webpack": "^5.74.0"
   },
